updated credit controller
