# src/main/java/org/cdpg/dx/aaa/credit/Controller/CreditController.java
@@ -5,8 +5,6 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.cdpg.dx.aaa.apiserver.ApiController;
 import org.cdpg.dx.aaa.credit.handler.CreditHandler;
-import org.cdpg.dx.aaa.organization.controller.OrganizationController;
-import org.cdpg.dx.aaa.organization.handler.OrganizationHandler;
 import org.cdpg.dx.auth.authorization.handler.AuthorizationHandler;
 import org.cdpg.dx.auth.authorization.model.DxRole;
 
@@ -43,14 +41,13 @@ public class CreditController implements ApiController {
 
     routerBuilder
       .operation("post-auth-v1-compute-role-request")
-      //.handler(AuthorizationHandler.forRoles(DxRole.COS_ADMIN))
       .handler(creditHandler::createComputeRoleRequest);
 
 
     routerBuilder
       .operation("get-auth-v1-compute-role-request")
       .handler(AuthorizationHandler.forRoles(DxRole.COS_ADMIN))
-      .handler(creditHandler::getAllPendingComputeRequests);
+      .handler(creditHandler::getAllComputeRequests);
 
     routerBuilder
       .operation("put-auth-v1-compute-role-request")
